# anova_stm32

./: .gitignore  .mxproject  CMakeLists.txt  Makefile  README.md  anova_stm32.ioc  mx.scratch
.circleci/: config.yml
Core/: CMakeLists.txt
Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: freertos.c  gpio.c  main.c
Inc/: tim.h
Src/: main.c  spi.c  stm32f1xx_it.c  tim.c  usart.c
application/: CMakeLists.txt
application/inc/: gui_thread.h  heater_control.h  heater_control.hpp  heater_control_task.h  motor_control.h
application/src/: application.c  gui_thread.c  gui_thread.cpp  heater_control.c  heater_control.cpp  motor_control.c  motor_control.cpp
cmake/: arm_gcc_toolchain.cmake  freertos.cmake  project.cmake  stm32_usb_cdc.cmake  stm32f1xx_flags.cmake  stm32f1xx_gcc_toolchain.cmake  stm32f1xx_hal.cmake  utils.cmake
modules/: CMakeLists.txt
modules/inc/: pid_controller.hpp  trace.h
modules/src/: pid_controller.cpp  trace.c
